kubernetes/infra/kevinnitrohomelab/istio-system/egolia/authorizationpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/security.istio.io/authorizationpolicy_v1.json
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: egolia-authorization-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals:
              - '*'
      to:
        - operation:
            hosts:
              - egolia-api.${PUBLIC_DOMAIN}
            paths:
              - course/*
              - billing/*
              - blog/*
            notPaths:
              - course/health/*
              - billing/health/*
              - blog/health/*
